--- a/functionloggin.html
+++ b/functionloggin.html
@@ -12,6 +12,14 @@
         }
         console.log(userloggedin());
 
+        function userloggedin(username){
+            return `${username} just logged in`
+        }
+        console.log(userloggedin()); function userloggedin(username){
+            return `${username} just logged in`
+        }
+        console.log(userloggedin());
+        
     // here we can also create a if else condition suppose if somebody does'nt provide his user name or anything else
     </script>
 </body>
